volexc/tests/ui/mapkey_union_with_array.vol
// rust:pass
// go:fail
// typescript:fail
// Union with array variant: valid in Rust only
union Value {
    Single(u32) = 1
    Multiple([u32]) = 2
}

struct Test {
    data: {Value:string}
}
